--- a/css/styles.css
+++ b/css/styles.css
@@ -22,9 +22,15 @@ html {
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
+  /* width: 90%; */
+  margin: auto;
 }
 section {
   min-height: 100vh;
+  /* width: 80%;
+  margin: auto; */
+  border-radius: 2rem;
+  overflow-x: hidden;
   padding: 10rem 9% 2rem;
 }
 .header {
@@ -37,6 +43,7 @@ section {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   z-index: 1;
 }
 
@@ -409,13 +416,12 @@ span {
     background: var(--bg-color);
     border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-    transition: all;
-
+    /* transition: all; */
     display: none;
   }
   .navbar.active {
     display: block;
-    transition: all;
+    /* transition: all; */
   }
   .navbar a {
     display: block;
@@ -433,6 +439,7 @@ span {
   .home{
     flex-direction: column;
   }
+
   .home-content h3{
     font-size: 2.6rem ;
   }
@@ -467,7 +474,9 @@ span {
   .portfolio-container{
     grid-template-columns: repeat(2, 1fr);
   }
-
+  .portfolio{
+    margin-top: 5rem;
+  }
 }
 
 @media (max-width:617px){
@@ -490,7 +499,7 @@ span {
   font-size: 50%;
  }
  .services-container{
-gap: 2rem;
+  gap: 2rem;
   grid-template-columns: 1fr;
  }
  .contact form .input-box input{
